--- a/ML_1.ipynb
+++ b/ML_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNqVV2fNf9ZGYqG/K1Op7z6",
+      "authorship_tag": "ABX9TyPk0lkv4TwXlWy53zJps1fw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "YIu8epXo2HQp",
         "outputId": "063ebd1f-ae7e-487c-c702-b9f34d8f5225"
@@ -105,7 +106,7 @@
         "id": "xDhG_HcGRJf8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1605
         },
         "outputId": "0c56c1b8-464c-4a88-c060-da1275639cd1"
       },
@@ -231,7 +232,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "DBUZc4VGRVph",
         "outputId": "b3e97795-adbc-4b64-bf12-7db09603afc8"
@@ -345,7 +347,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "tLqScXrJRf3V",
         "outputId": "c000bacf-36af-4680-a41d-b59633dafa97"
@@ -455,23 +458,24 @@
         "X = np.hstack((X0,X3))\n",
         "theta = np.zeros((2,1))\n",
         "theta, loss_history = gradient_descent(X, Y, theta, alpha, iterations)\n",
-        "print('Theta X3 =', theta)"
+        "print('Theta for X3:', theta[1])\n",
+        "print('Theta for X0 (bias):', theta[0])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "55v-7jVURt1V",
-        "outputId": "de530747-0625-4ea6-8f32-83ab458d11d0"
+        "outputId": "23fc1720-9345-46c0-9b18-f2dc32217bb1"
       },
-      "execution_count": 273,
+      "execution_count": 278,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Theta X3 = [[ 2.86831421]\n",
-            " [-0.51925373]]\n"
+            "Theta for X3: [-0.51925373]\n",
+            "Theta for X0 (bias): [2.86831421]\n"
           ]
         }
       ]
@@ -556,7 +560,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "x7vK3NCqR1jX",
         "outputId": "1df1d492-ab7c-4a97-ecb7-732f9c78a834"
