--- a/ML_1.ipynb
+++ b/ML_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpEx1ygUWehYKrP9XVaIzS",
+      "authorship_tag": "ABX9TyNqxryNJXVOjS2W88IaGMh5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "YIu8epXo2HQp",
         "outputId": "8ec61588-d036-407a-fe55-b3dc7ca5b1cc"
@@ -105,7 +106,7 @@
         "id": "xDhG_HcGRJf8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1605
         },
         "outputId": "8332e5cb-23c6-4a01-b05b-771116e5b44d"
       },
@@ -221,7 +222,7 @@
     {
       "cell_type": "code",
       "source": [
-        "iterations = 3000\n",
+        "iterations = 4500\n",
         "alpha = 0.01\n",
         "X = np.column_stack((X0, X1))\n",
         "theta = np.zeros((2, 1))\n",
@@ -232,7 +233,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "DBUZc4VGRVph",
         "outputId": "ad613ba6-321e-4e2d-f5e1-4d12851c052e"
@@ -337,7 +339,7 @@
     {
       "cell_type": "code",
       "source": [
-        "iterations = 1500\n",
+        "iterations = 4500\n",
         "alpha = 0.08\n",
         "X = np.column_stack((X0, X2))\n",
         "theta = np.zeros((2, 1))\n",
@@ -348,7 +350,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "tLqScXrJRf3V",
         "outputId": "90940e21-1091-475f-bf06-0c13d1ad59d3"
@@ -454,7 +457,7 @@
     {
       "cell_type": "code",
       "source": [
-        "iterations = 3000\n",
+        "iterations = 4500\n",
         "alpha = 0.01\n",
         "X = np.hstack((X0,X3))\n",
         "theta = np.zeros((2,1))\n",
@@ -465,7 +468,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "55v-7jVURt1V",
         "outputId": "9f99f163-0ed3-4ee8-f6b7-7515960a6815"
@@ -563,7 +567,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "x7vK3NCqR1jX",
         "outputId": "84a60cd9-502b-4d9c-c4f6-ce2a0852557c"
