--- a/ML_1.ipynb
+++ b/ML_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNqxryNJXVOjS2W88IaGMh5",
+      "authorship_tag": "ABX9TyPpEx1ygUWehYKrP9XVaIzS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 296,
+      "execution_count": 312,
       "metadata": {
         "id": "WXvdlaRaQLKG"
       },
@@ -47,13 +47,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "YIu8epXo2HQp",
-        "outputId": "8ec61588-d036-407a-fe55-b3dc7ca5b1cc"
+        "outputId": "b725f680-7bd4-4816-9396-046e6cd8212d"
       },
-      "execution_count": 297,
+      "execution_count": 313,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,11 +105,11 @@
         "id": "xDhG_HcGRJf8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1605
+          "height": 1000
         },
-        "outputId": "8332e5cb-23c6-4a01-b05b-771116e5b44d"
+        "outputId": "41abc66f-5bb7-4755-cb09-074d5955b833"
       },
-      "execution_count": 298,
+      "execution_count": 314,
       "outputs": [
         {
           "output_type": "display_data",
@@ -157,7 +156,7 @@
       "metadata": {
         "id": "Qmx91GT3RQV6"
       },
-      "execution_count": 299,
+      "execution_count": 315,
       "outputs": []
     },
     {
@@ -216,13 +215,13 @@
       "metadata": {
         "id": "mj_GH62fRS0-"
       },
-      "execution_count": 300,
+      "execution_count": 316,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "iterations = 4500\n",
+        "iterations = 3000\n",
         "alpha = 0.01\n",
         "X = np.column_stack((X0, X1))\n",
         "theta = np.zeros((2, 1))\n",
@@ -233,13 +232,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "DBUZc4VGRVph",
-        "outputId": "ad613ba6-321e-4e2d-f5e1-4d12851c052e"
+        "outputId": "22355494-0f0c-4f07-d440-c61a46aba4ce"
       },
-      "execution_count": 301,
+      "execution_count": 317,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,19 +266,19 @@
           "height": 581
         },
         "id": "FHT2OlLeRaGh",
-        "outputId": "3a96715c-fd72-4089-aeaf-7d7651be9759"
+        "outputId": "c478c8ec-32f7-4042-c1ed-71669c166130"
       },
-      "execution_count": 302,
+      "execution_count": 318,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7d1c172d37c0>"
+              "<matplotlib.legend.Legend at 0x7d1c18280be0>"
             ]
           },
           "metadata": {},
-          "execution_count": 302
+          "execution_count": 318
         },
         {
           "output_type": "display_data",
@@ -310,19 +308,19 @@
           "height": 581
         },
         "id": "qPYeic4mRdPz",
-        "outputId": "f2ea2ab2-9eb4-46f5-fdf8-9350d101340b"
+        "outputId": "a1a5bde0-cc8c-4a1e-85c4-a8aff9c89fe1"
       },
-      "execution_count": 303,
+      "execution_count": 319,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7d1c1724d8d0>"
+              "<matplotlib.legend.Legend at 0x7d1c18283430>"
             ]
           },
           "metadata": {},
-          "execution_count": 303
+          "execution_count": 319
         },
         {
           "output_type": "display_data",
@@ -339,7 +337,7 @@
     {
       "cell_type": "code",
       "source": [
-        "iterations = 4500\n",
+        "iterations = 1500\n",
         "alpha = 0.08\n",
         "X = np.column_stack((X0, X2))\n",
         "theta = np.zeros((2, 1))\n",
@@ -350,13 +348,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "tLqScXrJRf3V",
-        "outputId": "90940e21-1091-475f-bf06-0c13d1ad59d3"
+        "outputId": "6c01612e-b9ba-4505-d2b3-2af98e4d26ef"
       },
-      "execution_count": 304,
+      "execution_count": 320,
       "outputs": [
         {
           "output_type": "stream",
@@ -386,19 +383,19 @@
           "height": 581
         },
         "id": "FMv6H6PLRiNV",
-        "outputId": "48fbe5d0-fb00-4685-c0e5-32b42bd0278b"
+        "outputId": "bbaf81b1-2a78-411e-cb4e-62d777f68f12"
       },
-      "execution_count": 305,
+      "execution_count": 321,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7d1c17122710>"
+              "<matplotlib.legend.Legend at 0x7d1c16f85990>"
             ]
           },
           "metadata": {},
-          "execution_count": 305
+          "execution_count": 321
         },
         {
           "output_type": "display_data",
@@ -428,19 +425,19 @@
           "height": 581
         },
         "id": "J6ccFyVfRk1G",
-        "outputId": "dc1363dc-b257-4fd3-e4a2-409e2b561e76"
+        "outputId": "28e9368e-688b-4286-918a-ae3279a15b9f"
       },
-      "execution_count": 306,
+      "execution_count": 322,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7d1c1700b160>"
+              "<matplotlib.legend.Legend at 0x7d1c197bdd80>"
             ]
           },
           "metadata": {},
-          "execution_count": 306
+          "execution_count": 322
         },
         {
           "output_type": "display_data",
@@ -457,7 +454,7 @@
     {
       "cell_type": "code",
       "source": [
-        "iterations = 4500\n",
+        "iterations = 3000\n",
         "alpha = 0.01\n",
         "X = np.hstack((X0,X3))\n",
         "theta = np.zeros((2,1))\n",
@@ -468,13 +465,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "55v-7jVURt1V",
-        "outputId": "9f99f163-0ed3-4ee8-f6b7-7515960a6815"
+        "outputId": "0b127470-58b2-4528-9b49-ce78ee86d336"
       },
-      "execution_count": 307,
+      "execution_count": 323,
       "outputs": [
         {
           "output_type": "stream",
@@ -504,9 +500,9 @@
           "height": 564
         },
         "id": "jrWp0YTZRxGr",
-        "outputId": "c3b4ee8f-a41f-4efb-ea0c-0e784d8ec670"
+        "outputId": "b9f9664d-2446-46f4-fdd8-f9e2fee8e814"
       },
-      "execution_count": 308,
+      "execution_count": 324,
       "outputs": [
         {
           "output_type": "display_data",
@@ -537,9 +533,9 @@
           "height": 564
         },
         "id": "lDaANvq2Rzrh",
-        "outputId": "872795af-407d-429c-a82c-e398e2192b36"
+        "outputId": "f720a9ae-bbcc-4a26-d152-ef6564c11389"
       },
-      "execution_count": 309,
+      "execution_count": 325,
       "outputs": [
         {
           "output_type": "display_data",
@@ -567,13 +563,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "x7vK3NCqR1jX",
-        "outputId": "84a60cd9-502b-4d9c-c4f6-ce2a0852557c"
+        "outputId": "11e565f9-eb27-46b8-a722-bfe139a1cd26"
       },
-      "execution_count": 310,
+      "execution_count": 326,
       "outputs": [
         {
           "output_type": "stream",
@@ -609,9 +604,9 @@
           "height": 659
         },
         "id": "Jk-ROfAAR4q4",
-        "outputId": "a6b6c195-ac07-4ac6-ec42-5803314a8ec4"
+        "outputId": "3210475c-9978-459d-ded1-e830e8a7cf1b"
       },
-      "execution_count": 311,
+      "execution_count": 327,
       "outputs": [
         {
           "output_type": "stream",
